frontend/tests/cases/negative/fact-inf.gr
import Nat

fact : forall (n : Nat) . (N n) [∞..∞] -> Int
fact [Z] = 1;
fact [S m] = natToInt (S m) * fact [m]
